--- a/kubernetes/helm_charts/sunbird-RC/keycloak/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/keycloak/values.j2
@@ -30,6 +30,6 @@ autoscaling:
 keycloakenv:
   DB_PASSWORD: "{{ keycloak_db_password | default('postgres') }}"
   KEYCLOAK_PASSWORD: "{{ keycloak_admin_password | default('admin') }}"
-  KEYCLOAK_LOGO="{{ keycloak_logo | default('https://svgshare.com/i/hCs.svg') }}"
-  KEYCLOAK_USER="{{ keycloak_admin_user | default('admin') }}"
-  PROXY_ADDRESS_FORWARDING="{{ keycloak_proxy_address_forwarding | default('true') }}"
+  KEYCLOAK_LOGO: "{{ keycloak_logo | default('https://svgshare.com/i/hCs.svg') }}"
+  KEYCLOAK_USER: "{{ keycloak_admin_user | default('admin') }}"
+  PROXY_ADDRESS_FORWARDING: "{{ keycloak_proxy_address_forwarding | default('true') }}"
