--- a/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
+++ b/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
@@ -128,7 +128,7 @@ proxyconfig: |-
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Connection "";
       proxy_http_version 1.1;
-      proxy_pass http://keycloak;
+      proxy_pass http://keycloak-service:8080;
     }
     # Sunbird realm keycloak API endpoints
     location ~ /auth/realms/sunbird/(get-required-action-link|login-actions/(action-token|authenticate|required-action)|protocol/openid-connect/(auth|certs|logout|token|userinfo)|.well-known/openid-configuration) {
@@ -141,7 +141,7 @@ proxyconfig: |-
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Connection "";
       proxy_http_version 1.1;
-      proxy_pass http://keycloak;
+      proxy_pass http://keycloak-service:8080;
     }
     # Static Assets for keycloak endpoints with caching
     location ~ /auth/(resources/(.+\.(png|svg|ico|js|eot|ttf|woff|woff2|css))|welcome-content/(.+\.(png|svg|ico|js|eot|ttf|woff|woff2|css))) {
@@ -165,7 +165,7 @@ proxyconfig: |-
       proxy_send_timeout 60;
       proxy_read_timeout 70;
       proxy_http_version 1.1;
-      proxy_pass http://keycloak;
+      proxy_pass http://keycloak-service:8080;
     }
 
     {# Including custom configuration #}
@@ -227,10 +227,6 @@ nginxconfig: |
       # Nginx connection limit per ip
       limit_conn_zone $binary_remote_addr zone=limitbyaddr:10m;
       limit_conn_status 429;
-      upstream keycloak {
-          server keycloak-service:8080;
-          keepalive 1000;
-      }
 
       include /etc/nginx/defaults.d/*.conf;
       include /etc/nginx/conf.d/*.conf;
