--- a/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
+++ b/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
@@ -229,7 +229,7 @@ nginxconfig: |
       limit_conn_status 429;
 
       include /etc/nginx/defaults.d/*.conf;
-      include /etc/nginx/conf.d/*.conf;
+      # include /etc/nginx/conf.d/*.conf;
       #################
       # Caching Block #
       #################
