--- a/kubernetes/helm_charts/sunbird-RC/keycloak/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/keycloak/values.j2
@@ -33,3 +33,4 @@ keycloakenv:
   KEYCLOAK_LOGO: "{{ keycloak_logo | default('https://svgshare.com/i/hCs.svg') }}"
   KEYCLOAK_USER: "{{ keycloak_admin_user | default('admin') }}"
   PROXY_ADDRESS_FORWARDING: "{{ keycloak_proxy_address_forwarding | default('true') }}"
+  KEYCLOAK_IMPORT: /opt/jboss/keycloak/imports/realm-export.json
