added template values
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/kubernetes/helm_charts/sunbird-RC/keycloak/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/keycloak/values.j2
@@ -1,6 +1,7 @@
 namespace: {{ namespace }}
 imagepullsecrets: {{ imagepullsecrets }}
 dockerhub: {{ dockerhub }}
+admin_api_secret: {{ admin_api_secret }}
 
 replicaCount: {{keycloak_replicacount|default(1)}}
 repository: {{keycloak_repository|default('sunbird-rc-keycloak')}}
