--- a/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
+++ b/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
@@ -117,7 +117,7 @@ proxyconfig: |-
     ignore_invalid_headers off;  #pass through headers from Jenkins which are considered invalid by Nginx server.
     resolver {{ kube_dns_ip }} valid=30s;
     location /auth/ {
-          proxy_pass          http://keycloak-service:8080/auth/;
+          proxy_pass          http://keycloak:8080/auth/;
           proxy_set_header    Host               $host;
           proxy_set_header    X-Real-IP          $remote_addr;
           proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
