--- a/kubernetes/helm_charts/sunbird-RC/claim-ms/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/claim-ms/values.j2
@@ -2,32 +2,32 @@ namespace: {{ namespace }}
 imagepullsecrets: {{ imagepullsecrets }}
 dockerhub: {{ dockerhub }}
 
-replicaCount: {{claim-ms_replicacount|default(1)}}
-repository: {{claim-ms_repository|default('sunbird-rc-claim-ms')}}
+replicaCount: {{claim_ms_replicacount|default(1)}}
+repository: {{claim_ms_repository|default('sunbird-rc-claim-ms')}}
 image_tag: {{image_tag}}
 resources:
   requests:
-    cpu: {{claim-ms_cpu_req|default('100m')}}
-    memory: {{claim-ms_mem_req|default('100Mi')}}
+    cpu: {{claim_ms_cpu_req|default('100m')}}
+    memory: {{claim_ms_mem_req|default('100Mi')}}
   limits:
-    cpu: {{claim-ms_cpu_limit|default('1000m')}}
-    memory: {{claim-ms_memory_limit|default('1024Mi')}}
+    cpu: {{claim_ms_cpu_limit|default('1000m')}}
+    memory: {{claim_ms_memory_limit|default('1024Mi')}}
 network:
   port: 8082
   targetport: 8082
 strategy:
   type: RollingUpdate
-  maxsurge: {{ claim-ms_maxsurge|default('50%') }}
-  maxunavailable: {{ claim-ms_maxunavailable|default('50%') }}
+  maxsurge: {{ claim_ms_maxsurge|default('50%') }}
+  maxunavailable: {{ claim_ms_maxunavailable|default('50%') }}
 
 autoscaling:
-  enabled: {{ claim-ms_autoscaling_enabled | default('false') }}
-  minReplicas: {{ claim-ms_autoscaling_minReplicas|default(1) }}
-  maxReplicas: {{ claim-ms_autoscaling_maxReplicas|default(3) }}
-  targetCPUUtilizationPercentage: {{ claim-ms_autoscaling_targetCPUUtilizationPercentage|default(60) }}
-  targetMemoryUtilizationPercentage: {{ claim-ms_autoscaling_targetMemoryUtilizationPercentage|default('') }}
+  enabled: {{ claim_ms_autoscaling_enabled | default('false') }}
+  minReplicas: {{ claim_ms_autoscaling_minReplicas|default(1) }}
+  maxReplicas: {{ claim_ms_autoscaling_maxReplicas|default(3) }}
+  targetCPUUtilizationPercentage: {{ claim_ms_autoscaling_targetCPUUtilizationPercentage|default(60) }}
+  targetMemoryUtilizationPercentage: {{ claim_ms_autoscaling_targetMemoryUtilizationPercentage|default('') }}
 
-claim-msenv:
+claim_msenv:
   connectionInfo_uri: {{ postgres_connectionInfo_uri }}
   connectionInfo_username: {{ postgres_connectionInfo_username }}
   connectionInfo_password: {{ connectionInfo_password }}
