--- a/kubernetes/helm_charts/sunbird-RC/registry/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/registry/values.j2
@@ -31,63 +31,25 @@ rccoreenv:
   connectionInfo_uri: {{ postgres_connectionInfo_uri }}
   connectionInfo_username: {{ postgres_connectionInfo_username }}
   connectionInfo_password: {{ connectionInfo_password }}
-  elastic_search_enabled: {{ elastic_search_enabled|default('true')}}
+  elastic_search_enabled: {{ elastic_search_enabled|default('false')}}
   elastic_search_connection_url: {{ elastic_search_connection_url }}
   search_provider: "dev.sunbirdrc.registry.service.ElasticSearchService"
   search_providerName: "dev.sunbirdrc.registry.service.ElasticSearchService"
   enable_external_templates: {{ enable_external_templates|default('true') }}
-  sign_url: {{ sign_url|default('http://certificatesign-service:8079/sign') }}
+  sign_url: {{ sign_url|default('http://certificatesign:8079/sign') }}
   signature_enabled: {{ signature_enabled|default('true') }}
-  pdf_url: {{ pdf_url|default('http://certificateapi-service:8078/api/v1/certificatePDF') }}
-  template_base_url: {{ template_base_url|default('http://registry-service:8081/api/v1/templates/') }}
+  pdf_url: {{ pdf_url|default('http://certificateapi:8078/api/v1/certificatePDF') }}
+  template_base_url: {{ template_base_url|default('http://registry:8081/api/v1/templates/') }}
   workflow.enable: {{ registry_workflow_enable|default('false')}}
   connectionInfo_maxPoolSize: {{ registry_connectionInfo_maxPoolSize|default('200')}}
   auditTaskExecutor_queueCapacity: {{ registry_auditTaskExecutor_queueCapacity|default('100')}}
   taskExecutor_index_queueCapacity: {{ registry_taskExecutor_index_queueCapacity|default('100')}}
-  authentication_enabled: {{ registry_authentication_enabled|default('false')}}
-  async_enabled: {{ registry_async_enabled|default('true')}}
-  webhook_enabled: {{ registry_webhook_enabled|default('true')}}
-  ZOOKEEPER_CLIENT_PORT: {{ registry_zookeeper_client_port|default('2181')}}
-  ZOOKEEPER_TICK_TIME: {{ registry_zookeeper_tick_time|default('2000')}}
-  KAFKA_BROKER_ID: {{ registry_kafka_broker_id|default('1')}}
-  KAFKA_ZOOKEEPER_CONNECT: "{{groups['processing-cluster-zookeepers']|join(':2181,')}}:2181"
-  KAFKA_ADVERTISED_LISTENERS: "{{groups['processing-cluster-kafka']|join(':9092,')}}:9092"
-  kafka_bootstrap_address: "{{groups['processing-cluster-kafka']|join(':9092,')}}:9092"
-  KAFKA_LISTENER_SECURITY_PROTOCOL_MAP:  {{ registry_listener_security_protocol_map|default('INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT')}}
-  KAFKA_INTER_BROKER_LISTENER_NAME:  {{ registry_inter_broker_listener_name|default('INTERNAL')}}
-  KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR:  {{ registry_offsets_topic_replication_factor|default('1')}}
+  authentication_enabled: {{ registry_authentication_enabled|default('true')}}
+  async_enabled: {{ registry_async_enabled|default('false')}}
+  webhook_enabled: {{ registry_webhook_enabled|default('false')}}
   logging.level.root : {{ registry_logging_level|default('INFO')}}
 
-{# The below should get enabled once the service has probes implemented #}
-{# {{ registry_liveness_readiness | to_nice_yaml }} #}
-{{ opa_liveness_readiness | to_nice_yaml }}
-{{ envoy_liveness_readiness | to_nice_yaml }}
 
-registry_opa_enabled: {{ registry_opa_enabled | default('true') }}
-
-envoy_resources:
-  requests:
-    cpu: "{{ registry_envoy_cpu_req | default('100m') }}"
-    memory: "{{ registry_envoy_mem_req | default('100Mi') }}"
-  limits:
-    cpu: "{{ registry_envoy_cpu_limit | default('1') }}"
-    memory: "{{ registry_envoy_mem_limit | default('1024Mi') }}"
-
-opa_resources:
-  requests:
-    cpu: "{{ registry_opa_cpu_req | default('100m') }}"
-    memory: "{{ registry_opa_mem_req | default('100Mi') }}"
-  limits:
-    cpu: "{{ registry_opa_cpu_limit | default('1') }}"
-    memory: "{{ registry_opa_mem_limit | default('1024Mi') }}"
-
-initcontainer_resources:
-  requests:
-    cpu: "{{ registry_initcontainer_cpu_req | default('100m') }}"
-    memory: "{{ registry_initcontainer_mem_req | default('100Mi') }}"
-  limits:
-    cpu: "{{ registry_initcontainer_cpu_limit | default('100m') }}"
-    memory: "{{ registry_initcontainer_mem_limit | default('100Mi') }}"
 
 serviceMonitor:
   enabled: true
