--- a/kubernetes/helm_charts/sunbird-RC/filestorage/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/filestorage/values.j2
@@ -32,5 +32,5 @@ autoscaling:
 
 filestorageenv:
   MINIO_ROOT_USER: {{ MINIO_ROOT_USER|default('admin') }}
-  MINIO_ROOT_PASSWORD: {{ MINIO_ROOT_PASSWORD|default('12345678') }}
+  MINIO_ROOT_PASSWORD: {{ MINIO_ROOT_PASSWORD|default('admin') }}
 
