--- a/kubernetes/helm_charts/sunbird-RC/filestorage/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/filestorage/values.j2
@@ -34,3 +34,4 @@ filestorageenv:
   MINIO_ROOT_USER: {{ MINIO_ROOT_USER|default('admin') }}
   MINIO_ROOT_PASSWORD: {{ MINIO_ROOT_PASSWORD|default('admin') }}
 
+storage_size: {{ MINIO_STORAGE_SIZE_GB|default('50Gi') }}
