--- a/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
+++ b/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
@@ -135,6 +135,13 @@ proxyconfig: |-
           proxy_pass http://registry:8081/;
     }
 
+    location /bucket/ {
+          proxy_pass http://filestorage:9000/;
+    }
+
+    location /swagger/ {
+          proxy_pass http://registry:8081/;
+    }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
 
