--- a/kubernetes/helm_charts/sunbird-RC/registry/values.j2
+++ b/kubernetes/helm_charts/sunbird-RC/registry/values.j2
@@ -45,6 +45,7 @@ rccoreenv:
   sign_health_check_url: {{ sign_hc_url|default('http://certificatesign:8079/health') }}
   signature_enabled: {{ signature_enabled|default('true') }}
   pdf_url: {{ pdf_url|default('http://certificateapi:8078/api/v1/certificatePDF') }}
+  certificate_health_check_url: {{ cert_hc_url|default('http://certificateapi:8078/health') }}
   template_base_url: {{ template_base_url|default('http://registry:8081/api/v1/templates/') }}
   workflow.enable: {{ registry_workflow_enable|default('false')}}
   connectionInfo_maxPoolSize: {{ registry_connectionInfo_maxPoolSize|default('200')}}
