testing longhorn service type
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/kubernetes/ansible/roles/longhorn/templates/longhorn.j2
+++ b/kubernetes/ansible/roles/longhorn/templates/longhorn.j2
@@ -3,3 +3,7 @@
 
 persistence:
   defaultClassReplicaCount: {{ longhorn_default_replica_count |default('3') }}
+
+service:
+  ui:
+    type: Loadbalancer
