--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -1,6 +1,6 @@
 
 certificateapi:
-  enabled: {{sunbird-rc.certificateapi_enabled}}
+  enabled: {{sunbird_rc.certificateapi_enabled}}
   CERTIFICATE_DOMAIN_URL: "https://example.com"
   CERTIFICATE_PUBLIC_KEY: ''
   CERTIFICATE_PRIVATE_KEY: ''
