--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -2,9 +2,9 @@
 certificateapi:
   enabled: {{sunbird_rc.certificateapi_enabled}}
   CERTIFICATE_DOMAIN_URL: "https://example.com"
-  CERTIFICATE_PUBLIC_KEY: ''
-  CERTIFICATE_PRIVATE_KEY: ''
-
+  CERTIFICATE_PUBLIC_KEY: {{CERTIFICATE_PUBLIC_KEY | default("''")}}
+  CERTIFICATE_PRIVATE_KEY: {{CERTIFICATE_PRIVATE_KEY | default("''")}}
+  
 certificatesign:
   enabled: false
   CERTIFICATE_DOMAIN_URL: "https://example.com"
