--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -2,8 +2,10 @@
 certificateapi:
   enabled: {{sunbird_rc.certificateapi_enabled}}
   CERTIFICATE_DOMAIN_URL: "https://example.com"
-  CERTIFICATE_PUBLIC_KEY: {{CERTIFICATE_PUBLIC_KEY | default("''")}}
-  CERTIFICATE_PRIVATE_KEY: {{CERTIFICATE_PRIVATE_KEY | default("''")}}
+  CERTIFICATE_PUBLIC_KEY: |- 
+    {{ CERTIFICATE_PUBLIC_KEY | default("''") | indent(width=4) }}
+  CERTIFICATE_PRIVATE_KEY: |-
+    {{ CERTIFICATE_PRIVATE_KEY | default("''") | indent(width=4) }}
   
 certificatesign:
   enabled: false
