--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -30,13 +30,13 @@ elasticsearch:
 filestorage:
   enabled: {{sunbird_rc.filestorage_enabled}}
   filestorageenv:
-    MINIO_ROOT_USER: admin
-    MINIO_ROOT_PASSWORD: admin1234
+    MINIO_ROOT_USER: {{filestorage.minio_root_user}}
+    MINIO_ROOT_PASSWORD: {{filestorage.minio_root_password}}
 
 keycloak:
-  enabled: true
+  enabled: {{sunbird_rc.keycloak_enabled}}
   keycloakenv:
-    DB_PASSWORD: 'postgres'
+    DB_PASSWORD: {{postgres_connectionInfo_username}}
     KEYCLOAK_PASSWORD: 'admin'
     KEYCLOAK_LOGO: 'https://svgshare.com/i/hCs.svg'
     DB_VENDOR: 'postgres'
