--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -40,7 +40,7 @@ keycloak:
     KEYCLOAK_PASSWORD: {{keycloak.admin_password}}
     KEYCLOAK_LOGO: {{keycloak.keycloak_logo_url}}
     DB_VENDOR: 'postgres'
-    DB_ADDR: {{postgres_connectionInfo_uri}}
+    DB_ADDR: {{postgress_db_host}}
     DB_PORT: '5432'
     DB_DATABASE: 'registry'
     DB_USER: {{postgres_connectionInfo_username}}
@@ -51,16 +51,16 @@ keycloak:
     ADMIN_API_SECRET: {{keycloak.admin_api_secret}}
 
 registry:
-  enabled: true
+  enabled: {{sunbird_rc.registry_enabled}}
   rccoreenv:
-    connectionInfo_uri: 'jdbc:postgresql://XXXXXX:5432/registry'
-    connectionInfo_username: 'postgres'
-    connectionInfo_password: 'postgres'
-    elastic_search_enabled: 'false'
-    elastic_search_connection_url: 'elasticsearch-master:9200'
-    sunbird_sso_admin_client_secret: 'XXXXXX'
-    sunbird_sso_url: http://keycloak:8080/auth
-    filestorage_access_key: 'admin'
-    filestorage_secret_key: 'admin1234'
+    connectionInfo_uri: {{postgres_connectionInfo_uri}}
+    connectionInfo_username: {{postgres_connectionInfo_username}}
+    connectionInfo_password: {{postgres_connectionInfo_password}}
+    elastic_search_enabled: {{sunbird_rc.elasticsearch_enabled}}
+    elastic_search_connection_url: {{elastic_search_connection_url}}
+    sunbird_sso_admin_client_secret: {{keycloak.admin_api_secret}}
+    sunbird_sso_url: {{sunbird_sso_url}}
+    filestorage_access_key: {{filestorage.minio_root_user}}
+    filestorage_secret_key: {{filestorage.minio_root_password}}
 
 
