--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -6,6 +6,18 @@ certificateapi:
     {{ CERTIFICATE_PUBLIC_KEY | default("''") | indent(width=4) }}
   CERTIFICATE_PRIVATE_KEY: |-
     {{ CERTIFICATE_PRIVATE_KEY | default("''") | indent(width=4) }}
+  ingress:
+    enabled: false
+    path: /certificateapi
+    annotations: {{nginx_public_ingress_service_annotations | d('')  | to_json}}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"    
+    hosts:
+      - {{domain_name}}
+    tls:
+     - secretName: ingress-cert
+       hosts:
+         - {{domain_name}}
   
 certificatesign:
   enabled: {{sunbird_rc.certificatesign_enabled}}
