--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -9,7 +9,7 @@ certificateapi:
   ingress:
     enabled: {{ingress_enabled.certificateapi}}
     path: /certificateapi
-    annotations: {{nginx_public_ingress_service_annotations | d('')  | to_json}}
+    annotations: {{ingress_service_annotations | d('')  | to_json}}
       # kubernetes.io/ingress.class: nginx
       # kubernetes.io/tls-acme: "true"    
     hosts:
@@ -35,6 +35,18 @@ claim-ms:
     connectionInfo_username: {{postgres_connectionInfo_username}}
     connectionInfo_password: {{postgres_connectionInfo_password}}
     sunbirdrc_url: http://registry:8081
+  ingress:
+    enabled: {{ingress_enabled.certificateapi}}
+    path: /claim-ms
+    annotations: {{ingress_service_annotations | d('')  | to_json}}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"    
+    hosts:
+      - {{domain_name}}
+    tls:
+     - secretName: ingress-cert
+       hosts:
+         - {{domain_name}}
 
 elasticsearch:
   enabled: {{sunbird_rc.elasticsearch_enabled}} 
