--- a/helm_charts/sunbird-rc/values.j2
+++ b/helm_charts/sunbird-rc/values.j2
@@ -99,7 +99,7 @@ registry:
 
   ingress:
     enabled: {{ingress_enabled.registry}}
-    path: /auth
+    path: /registry
     annotations: {{ingress_service_annotations | d('')  | to_json}}  
     hosts:
       - {{domain_name}}
