--- a/helm_charts/certificatesign/values.j2
+++ b/helm_charts/certificatesign/values.j2
@@ -1,3 +1,4 @@
+namespace: {{ namespace }}
 imagepullsecrets: {{ imagepullsecrets | default("")}}
 dockerhub: {{ dockerhub | default("dockerhub")}}
 
