--- a/helm_charts/certificatesign/values.j2
+++ b/helm_charts/certificatesign/values.j2
@@ -1,38 +1,36 @@
 namespace: {{ namespace }}
-imagepullsecrets: {{ imagepullsecrets | default("")}}
-dockerhub: {{ dockerhub | default("dockerhub")}}
+imagepullsecrets: {{ imagepullsecrets }}
+dockerhub: {{ dockerhub }}
 
-replicaCount: {{ replica_count | default("1")}}
-repository: {{image_name | default('sunbird-rc-certificate-signer')}}
-image_tag: {{ image_tag | default('v0.0.13')}}
+replicaCount: {{certificatesign_replicacount|default(1)}}
+repository: {{certificatesign_repository|default('sunbird-rc-certificate-signer')}}
+image_tag: {{image_tag}}
 resources:
   requests:
-    cpu: {{certifcatesign_cpu_req|default('100m')}}
-    memory: {{certifcatesign_mem_req|default('100Mi')}}
+    cpu: {{certificatesign_cpu_req|default('100m')}}
+    memory: {{certificatesign_mem_req|default('100Mi')}}
   limits:
-    cpu: {{certifcatesign_cpu_limit|default('1')}}
-    memory: {{certifcatesign_mem_limit|default('1024Mi')}}
+    cpu: {{certificatesign_cpu_limit|default('1000m')}}
+    memory: {{certificatesign_memory_limit|default('1024Mi')}}
 network:
   port: 8079
   targetport: 8079
 strategy:
   type: RollingUpdate
-  maxsurge: '50%'
-  maxunavailable: '50%'
+  maxsurge: {{ certificatesign_maxsurge|default('50%') }}
+  maxunavailable: {{ certificatesign_maxunavailable|default('50%') }}
 
 autoscaling:
-  enabled: 'false'
-  minReplicas: 1
-  maxReplicas: 3
-  targetCPUUtilizationPercentage: 60
-  targetMemoryUtilizationPercentage: ''
+  enabled: {{ certificatesign_autoscaling_enabled | default('false') }}
+  minReplicas: {{ certificatesign_autoscaling_minReplicas|default(1) }}
+  maxReplicas: {{ certificatesign_autoscaling_maxReplicas|default(3) }}
+  targetCPUUtilizationPercentage: {{ certificatesign_autoscaling_targetCPUUtilizationPercentage|default(60) }}
+  targetMemoryUtilizationPercentage: {{ certificatesign_autoscaling_targetMemoryUtilizationPercentage|default('') }}
 
 certificatesignenv:
   PORT: "8079"
-  QR_TYPE: 'URL'
-  CERTIFICATE_DOMAIN_URL: {{certificate_domain_url | default('https://example.com')}}
-  CERTIFICATE_PUBLIC_KEY: |- 
-    {{ CERTIFICATE_PUBLIC_KEY | default("''") | indent(width=4) }}
-  CERTIFICATE_PRIVATE_KEY: |-
-    {{ CERTIFICATE_PRIVATE_KEY | default("''") | indent(width=4) }}
-  SIGNING_KEY_TYPE: RSA
+  QR_TYPE: {{ QR_TYPE|default('URL') }}
+  CERTIFICATE_DOMAIN_URL: "https://{{domain_name}}"
+  CERTIFICATE_PUBLIC_KEY: "{{ CERTIFICATESIGN_PUBLIC_KEY | default('') }}"
+  CERTIFICATE_PRIVATE_KEY: "{{ CERTIFICATESIGN_PRIVATE_KEY | default('') }}" 
+  SIGNING_KEY_TYPE: "{{ SIGNING_KEY_TYPE|default('RSA')}}"
