--- a/helm_charts/claim-ms/values.j2
+++ b/helm_charts/claim-ms/values.j2
@@ -30,5 +30,5 @@ autoscaling:
 claim_msenv:
   connectionInfo_uri: {{ postgres_connectionInfo_uri }}
   connectionInfo_username: {{ postgres_connectionInfo_username }}
-  connectionInfo_password: {{ connectionInfo_password }}
+  connectionInfo_password: {{ postgres_connectionInfo_password }}
   sunbirdrc_url: http://registry:8081
