--- a/helm_charts/elasticsearch/values.j2
+++ b/helm_charts/elasticsearch/values.j2
@@ -82,10 +82,10 @@ networkHost: "0.0.0.0"
 
 volumeClaimTemplate:
   accessModes: [ "ReadWriteOnce" ]
-  storageClassName: oci-bv
+  storageClassName: {{ elastic_search_storage_class|default('longhorn') }}
   resources:
     requests:
-      storage: 50Gi
+      storage: {{ elastic_search_storage_size|default('1Gi') }}
 
 rbac:
   create: true
