added more path to ingress
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -100,6 +100,15 @@ proxyconfig: |-
     location /bucket/ {
           proxy_pass http://filestorage:9000/;
     }
+    location /longhorn/ {
+          proxy_pass http://longhorn-frontend.longhorn-system:80/;
+    }
+    location /grafana/ {
+          proxy_pass http://prometheus-community-grafana.monitoring:80/;
+    }
+    location /prometheus/ {
+          proxy_pass http://prometheus-community-kube-prometheus.monitoring:9090/;
+    }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
 
