--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -103,10 +103,10 @@ proxyconfig: |-
     location /longhorn/ {
           proxy_pass http://longhorn-frontend.longhorn-system:80/;
     }
-    location /grafana/ {
+    location ~ ^/(grafana|login)/ {
           proxy_pass http://prometheus-community-grafana.monitoring:80/;
     }
-    location /prometheus/ {
+    location ~ ^/(prometheus|graph)/ {
           proxy_pass http://prometheus-community-kube-prometheus.monitoring:9090/;
     }
     {# Including custom configuration #}
