added grafana path
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -103,7 +103,9 @@ proxyconfig: |-
     location /longhorn/ {
           proxy_pass http://longhorn-frontend.longhorn-system:80/;
     }
-
+    location /grafana/ {
+          proxy_pass http://prometheus-community-grafana.monitoring:80/;
+    }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
 
