--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -104,9 +104,7 @@ proxyconfig: |-
           proxy_pass http://longhorn-frontend.longhorn-system:80/;
     }
     location /grafana/ {
-          proxy_pass http://prometheus-community-grafana.monitoring:80/;
-    }
-    location /login/ {
+          proxy_set_header    Host               $host;
           proxy_pass http://prometheus-community-grafana.monitoring:80/;
     }
     {# Including custom configuration #}
