--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -110,7 +110,7 @@ proxyconfig: |-
       proxy_http_version 1.1;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
-      set $target http://prometheus-community-grafana.svc.cluster.local;
+      set $target http://prometheus-community-grafana.monitoring.svc.cluster.local;
       rewrite ^/grafana/(.*) /$1 break;
       proxy_pass $target;
     }
