--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -104,26 +104,13 @@ proxyconfig: |-
           proxy_pass http://longhorn-frontend.longhorn-system:80/;
     }
     location /grafana/ {
-      auth_request /login;
-      auth_request_set $target http://prometheus-community-grafana.monitoring.svc.cluster.local;
-      include /etc/nginx/defaults.d/compression.conf;
-      proxy_set_header Connection "";
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      set $target http://prometheus-community-grafana.monitoring.svc.cluster.local;
-      rewrite ^/grafana/(.*) /$1 break;
-      proxy_pass $target;
-    }
-    location = /login {
-      set $target http://prometheus-community-grafana.monitoring.svc.cluster.local;
-      proxy_set_header Host             $host;
-      proxy_set_header X-Real-IP        $remote_addr;
-      proxy_set_header X-Scheme         $scheme;
-      proxy_set_header Content-Length   "";
-      proxy_pass_request_body           off;
-      proxy_set_header X-Request-ID $sb_request_id;
-      proxy_pass $target;
+        proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Script-Name /grafana;
+        proxy_redirect default;
     }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
