--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -103,17 +103,15 @@ proxyconfig: |-
     location /longhorn/ {
           proxy_pass http://longhorn-frontend.longhorn-system:80/;
     }
-    location /grafana/ {
-        proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Script-Name /grafana;
-        proxy_redirect default;
-    }
-    location /login/ {
-        proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local/;
+    location /grafana/login {
+      include /etc/nginx/defaults.d/compression.conf;
+      proxy_set_header Connection "";
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      set $target http://prometheus-community-grafana.monitoring.svc.cluster.local;
+      rewrite ^/grafana/(.*) /$1 break;
+      proxy_pass $target;
     }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
