--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -103,15 +103,10 @@ proxyconfig: |-
     location /longhorn/ {
           proxy_pass http://longhorn-frontend.longhorn-system:80/;
     }
-    location /grafana/login {
-      include /etc/nginx/defaults.d/compression.conf;
-      proxy_set_header Connection "";
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      set $target http://prometheus-community-grafana.monitoring.svc.cluster.local;
-      rewrite ^/grafana/(.*) /$1 break;
-      proxy_pass $target;
+    location /grafana/ {
+    proxy_set_header Host $host;
+    proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local;
+    rewrite ^/grafana/(.*) /$1 break;
     }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
