--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -108,6 +108,11 @@ proxyconfig: |-
     proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local;
     rewrite ^/grafana/(.*) /$1 break;
     }
+    location /login/ {
+      proxy_set_header Host $host;
+      proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local;
+      rewrite ^/login/(.*) /$1 break;
+    }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
 
