--- a/ansible/roles/bootstrap_k8s/templates/prometheus.j2
+++ b/ansible/roles/bootstrap_k8s/templates/prometheus.j2
@@ -86,8 +86,8 @@ grafana:
       url: https://grafana.net
     server:
       domain: "{{domain_name}}"
-      root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana/
-      serve_from_sub_path = true
+      root_url: %(protocol)s://%(domain)s:%(http_port)s/grafana/
+      serve_from_sub_path: true
 alertmanager:
   enabled: true
   #alerManagerSpec:
