--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -103,9 +103,10 @@ proxyconfig: |-
     location /longhorn/ {
           proxy_pass http://longhorn-frontend.longhorn-system:80/;
     }
-    location / {
+    location /grafana {
       proxy_set_header Host $host;
       proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local;
+      rewrite  ^/grafana/(.*)  /$1 break;
     }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
