--- a/ansible/roles/bootstrap_k8s/templates/prometheus.j2
+++ b/ansible/roles/bootstrap_k8s/templates/prometheus.j2
@@ -86,7 +86,7 @@ grafana:
       url: https://grafana.net
     server:
       domain: "{{domain_name}}"
-      root_url: "%(protocol)s://%(domain)s:%(http_port)s/grafana/"
+      root_url: "https://{{domain_name}}/grafana/"
       serve_from_sub_path: true
 alertmanager:
   enabled: true
