adding prometheus path
Signed-off-by: Deepak Devadathan <deepak.devadathan@oracle.com>

--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -107,6 +107,10 @@ proxyconfig: |-
       proxy_set_header Host $host;
       proxy_pass http://prometheus-community-grafana.monitoring.svc.cluster.local;
     }
+    location /prometheus {
+      proxy_set_header Host $host;
+      proxy_pass http://prometheus-community-kube-prometheus.monitoring.svc.cluster.local:9090;
+    }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
 
