--- a/helm_charts/nginx-ingress/values.j2
+++ b/helm_charts/nginx-ingress/values.j2
@@ -110,7 +110,7 @@ proxyconfig: |-
     location /prometheus {
       proxy_set_header Host $host;
       proxy_pass http://prometheus-community-kube-prometheus.monitoring.svc.cluster.local:9090;
-      rewrite ^/prometheus$ / break;
+      rewrite ^/prometheus$ /graph break;
     }
     {# Including custom configuration #}
     {{ proxy_custom_config }}}
