--- a/ansible/roles/istio/templates/uninstall_istio.j2
+++ b/ansible/roles/istio/templates/uninstall_istio.j2
@@ -4,4 +4,7 @@ export PATH="{{istio_install_location}}/istio-{{istio_version}}/bin:$PATH"
 
 
 istioctl uninstall -y --purge
+
+kubectl delete -f {{istio_install_location}}/istio-{{istio_version}}/samples/addons/
+
 kubectl delete namespace istio-system
